[tool.poetry]
name = "photosoverride"
version = "0.1.0"
description = ""
authors = ["d9pouces <github@19pouces.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "photosoverride.settings"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 10